# kepler-rss-feed

./: README.md  app.py  gitignore  pyproject.toml  rsscli.py  rsscore.sh
.github/workflows/: ci.yml
src/: app.py  rsscli.py
src/templates/: _error.html  index.html
templates/: _articles.html  index.html
tests/: test_app.py
