[project]
name = "kepler-rss-feed"
version = "0.1.0"
description = "Keep up with the news, with a cute retro futuristic page."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.11",
    "flask>=3.1.1",
    "flask-limiter>=3.12",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
